// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Password/> Snapshot 1`] = `
<div>
  <h1>
    Password
  </h1>
  <p>
    Here you can set passwords for Foris and optionally for advanced features (LuCI and SSH). Make sure to set secure password which is long and uncommon.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <h2>
      Foris Password
    </h2>
    <p>
      Set your password for this administration interface.
    </p>
    <form>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          Current Foris password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="1"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="input-group-text"
              type="button"
            >
              <i
                class="fa fa-eye"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="2"
        >
          New Foris password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control  is-invalid"
            id="2"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="input-group-text"
              type="button"
            >
              <i
                class="fa fa-eye"
              />
            </button>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          Password can't be empty.
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="3"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="3"
          >
            Use same password for advanced administration (root)
            <small
              class="form-text text-muted"
            >
              Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
            </small>
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
    <form
      class="mt-3"
    >
      <h2>
        Advanced Administration (root) Password
      </h2>
      <p>
        In order to access the advanced configuration options which are not available here, you must
set the root user's password. The advanced configuration options can be managed either 
through the 
        <a
          href="%s"
          rel="noopener noreferrer"
          target="_blank"
        >
          LuCI web interface
        </a>
         or via SSH.
      </p>
      <div
        class="form-group"
      >
        <label
          for="4"
        >
          New advanced administration password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control  is-invalid"
            id="4"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="input-group-text"
              type="button"
            >
              <i
                class="fa fa-eye"
              />
            </button>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          Password can't be empty.
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Password/> Snapshot: same password for root 1`] = `
<div>
  <h1>
    Password
  </h1>
  <p>
    Here you can set passwords for Foris and optionally for advanced features (LuCI and SSH). Make sure to set secure password which is long and uncommon.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <h2>
      Foris Password
    </h2>
    <p>
      Set your password for this administration interface.
    </p>
    <form>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          Current Foris password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="1"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="input-group-text"
              type="button"
            >
              <i
                class="fa fa-eye"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="2"
        >
          New Foris password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control  is-invalid"
            id="2"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="input-group-text"
              type="button"
            >
              <i
                class="fa fa-eye"
              />
            </button>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          Password can't be empty.
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="3"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="3"
          >
            Use same password for advanced administration (root)
            <small
              class="form-text text-muted"
            >
              Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
            </small>
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Customized <Password/> Snapshot 1`] = `
<div>
  <h1>
    Password
  </h1>
  <p>
    Here you can set passwords for Foris and optionally for advanced features (LuCI and SSH). Make sure to set secure password which is long and uncommon.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <h2>
      Foris Password
    </h2>
    <p>
      Set your password for this administration interface.
    </p>
    <form>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          Current Foris password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="1"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="input-group-text"
              type="button"
            >
              <i
                class="fa fa-eye"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="2"
        >
          New Foris password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control  is-invalid"
            id="2"
            type="password"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="input-group-text"
              type="button"
            >
              <i
                class="fa fa-eye"
              />
            </button>
          </div>
        </div>
        <div
          class="invalid-feedback"
        >
          Password can't be empty.
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
